--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,4 @@ head
 body
 h1 Matching Records
 each record in rs
-	p #{record.name}   |   #{record.address}
+	p Name: #{record.name}   |   Address: #{record.address}
